error.txt
(gdb) run
Starting program: /home/yash/Desktop/v4l 
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/aarch64-linux-gnu/libthread_db.so.1".
[New Thread 0x7fb5cdbea0 (LWP 8649)]
[New Thread 0x7fb54daea0 (LWP 8650)]
[New Thread 0x7fb4c9aea0 (LWP 8651)]

Thread 1 "v4l" received signal SIGSEGV, Segmentation fault.
strlen () at ../sysdeps/aarch64/strlen.S:94
94	../sysdeps/aarch64/strlen.S: No such file or directory.
(gdb) bt
#0  0x0000007fb7411450 in strlen () at ../sysdeps/aarch64/strlen.S:94
#1  0x0000007fb75894f8 in g_strdup ()
    at /usr/lib/aarch64-linux-gnu/libglib-2.0.so.0


v4l.cpp: In function ‘void start_pipeline(AppData*)’:
v4l.cpp:83:35: error: too few arguments to function ‘gboolean gst_init_check(int*, char***, GError**)’
     if (!gst_init_check(NULL, NULL)) {
                                   ^
In file included from v4l.cpp:2:0:
/usr/include/gstreamer-1.0/gst/gst.h:104:10: note: declared here
 gboolean gst_init_check   (int *argc, char **argv[],
